# CPPOpenGLDEV

./: CMakeLists.txt  csd2101-project.bat
lib/gfx/lib/Release/: GfxLib.lib
projects/csd2101+proj/GfxDriver/src/: YourBoundingSphere.cpp  YourCamera.cpp  YourCamera.h  YourCullerClipper.cpp  YourCullerClipper.h  YourRasterizer.cpp  YourRasterizer.h  main.cpp
projects/csd2101+proj/GfxLib/gfx/: Camera.h  Controller_Clipping.h  Controller_Lighting.h  Controller_Picking.h  Controller_Rasterization.h  Controller_Transformation.h  CycleTimer.h  Frustum.h  GFX.h  GFXInternal.h  GraphicsPipe.h  GraphicsPipe.inl  Math.h  Matrix4.h  MeshGenerator_Plane.h  MeshGenerator_Point.h  MeshImporter_IFS.h  Model.h  Object.h  Quaternion.h  Sphere.h  Transform.h  Vector3.h  Vector4.h  Vertex.h
